@@ -1,3 +1,8 @@
+2005-10-31  Thorsten Kukuk  <kukuk@suse.de>
+
+	* modules/pam_filter/pam_filter.c: Use XCASE only if defined
+	[#624214]
+
 2005-10-27  Thorsten Kukuk  <kukuk@suse.de>
 
 	* doc/man/pam.8: Fix wording for authentication chapter [#1197444]
